restore with lockfile to appease NuGet

--- a/UltraVibrations/UltraVibrations.csproj
+++ b/UltraVibrations/UltraVibrations.csproj
@@ -10,6 +10,7 @@
     <PackageLicenseExpression>AGPL-3.0-or-later</PackageLicenseExpression>
     <IsPackable>false</IsPackable>
     <RootNamespace>UltraVibrations</RootNamespace>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
   <ItemGroup>
